--- a/resources/assets/scss/forum/_comment.scss
+++ b/resources/assets/scss/forum/_comment.scss
@@ -7,14 +7,22 @@ ul.comments-list {
 
     ul.comments-list {
         margin-left: 20px;
-        margin-bottom: 20px;
+        margin-bottom: 40px;
+        position: relative;
+
         &:before {
-            position: relative;
+            position: absolute;
             font-family: $icon;
             content: "\e626";
-            left: -20px;
-            top: 24px;
-            font-size: 13px;
+            left: -17px;
+            top: 0px;
+            font-size: 12px;
+
+            @include breakpoint($break-620) {
+                left: 7px;
+                top: 25px;
+                font-size: 10px;
+            }
         }
 
         ul.comments-list {
@@ -32,6 +40,8 @@ ul.comments-list {
 }
 
 li.comment {
+    margin-top: 10px;
+
     .inner {
         border: 2px solid $darkGrey;
         position: relative;
@@ -48,6 +58,7 @@ li.comment {
 form.comment-form {
     textarea {
         width: 100%;
+        font-size: 17px;
     }
 }
 
@@ -65,6 +76,7 @@ form.comment-form {
 form.reply-form {
     textarea {
         width: 100%;
+        font-size: 17px;
     }
 }
 
